# crawlrs

./: .env.example  .env.test  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  Cargo.toml  DEPLOYMENT_REPORT.md  DISCREPANCY_REPORT.md  Dockerfile  FAILED_TESTS_REPORT.md  FINAL_TEST_REPORT.md  IFLOW.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  LICENSE  LOAD_TEST_CONFIG.md  OPS.md  README.md  README_EN.md  README_zh.md  TEST_PLAN.md  TEST_REPORT.md  TEST_RESULTS_FINAL.md  TEST_STATUS_REPORT.md  USER_GUIDE.md  add_credits.rs  add_credits.sql  check_output.txt  check_output_2.txt  clang_wrapper.sh  cleanup_unused_images.sh  code_review_report.md  deny.toml  di.md  docker-compose.test.browser.yml  docker-compose.test.full.yml  docker-compose.test.minio.yml  docker-compose.test.search.yml  (+18 more)
.cargo/: .global-cache  config.toml
.claude/: skills
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-tech-debt.yml  ci.yml  codeql.yml  release.yml
.iflow/: skills
.iflow/agents/: code-simplifier.md
.mimocode/: .cron-lock
.qoder/rules/: global.md  project.md
.sisyphus/: ralph-loop.local.md
benches/: benchmark.rs  cache_performance.rs
config/: default.toml  permissions.yaml  prompts.toml  test.env  test.toml  test_server.example.toml  test_server.toml
docker/: .dockerignore  .env.example  .env.minio.example  .env.test  .env.test.example  Dockerfile  Dockerfile.runtime  Dockerfile.test  docker-compose.minio.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  init_test_data.sh  run_tests.sh
docker/prometheus/: alertmanager.yml  prometheus.yml
docker/test-utils/: README.md  cleanup-db.sh  cleanup-files.sh  cleanup-redis.sh  cleanup-test-env.sh  reset-containers.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  BRANCHING.md  CACHE_OPTIMIZATION_RECOMMENDATIONS.md  CODE_REVIEW_REPORT.md  OPENCSPEC-DI-REFACTORING.md  TEST_PLAN.md  TEST_RUNBOOK.md  TEST_SUMMARY.md  USER_GUIDE.md  ettara.md  migration.md  ops_manual.md  prd.md  task.md  tdd.md  test.md  test_cross_reference_report.md  test_ettara.md  uat.md  uat_cross_reference_report.md  修正.md
docs/plans/: 2025-01-21-dependency-optimization.md  2026-01-14-full-production-testing.md  2026-01-21-modernization-plan.md
examples/: Cargo.toml  QUICKSTART.md  README.md  mod.rs  test_google.rs  test_llm_extraction.rs  test_unified_search.rs  text_encoding_integration_demo.rs
examples/advanced/: README.md  async_batch.rs  async_streams.rs  custom_engines.rs  error_handling.rs  metrics_export.rs
examples/auth/: README.md  api_key_auth.rs  bearer_token.rs  scope_validation.rs  team_isolation.rs
examples/browser/: engine_router_demo.rs  mod.rs  test_flaresolverr_direct.rs  test_google_homepage.rs  test_google_preview.rs  test_playwright_basic.rs
examples/cache/: README.md  cache_configuration.rs  oxcache_cache.rs  redis_cache.rs  ttl_management.rs
examples/config/: README.md  basic_config.rs  env_override.rs  validation.rs
examples/crawl/: README.md  basic_crawl.rs  depth_control.rs  filter_patterns.rs  result_pagination.rs  robots_compliance.rs  status_tracking.rs
examples/database/: README.md  basic_crud.rs  migration.rs  transaction.rs
examples/extract/: README.md  css_selector.rs  llm_extraction.rs  multi_rules.rs  output_formats.rs  structured_data.rs  xpath_extraction.rs
examples/map/: README.md
examples/proxy/: README.md  http_proxy.rs  proxy_auth.rs  rotate_proxies.rs
examples/rate-limiting/: README.md  basic_rate_limit.rs  circuit_breaker.rs  team_concurrency.rs
examples/scrape/: README.md  basic_scrape.rs  custom_headers.rs  extraction_rules.rs  form_extraction.rs  multi_format_output.rs  page_actions.rs  screenshot.rs
examples/sdk/: README.md  basic_sdk.rs  custom_middleware.rs
examples/search/: mod.rs  test_baidu.rs  test_bing.rs  test_google.rs  test_harness.rs  test_smart_search.rs  test_smart_search_demo.rs  test_sogou.rs  test_unified_search.rs
examples/src/: lib.rs  test_harness.rs
examples/teams/: README.md  basic_teams.rs  credits_management.rs  geo_restrictions.rs
examples/text_encoding/: mod.rs  text_encoding_integration_demo.rs
examples/webhooks/: README.md  basic_webhook.rs  retry_logic.rs  task_events.rs
grafana/dashboards/: overview.json
k8s/: api-deployment.yaml  secrets.yaml  worker-deployment.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_tasks.rs  m20240101_000002_create_crawls.rs  m20240101_000003_create_webhook_events.rs  m20240101_000004_create_teams_and_keys.rs  m20250101_unified_schema.rs  m20251211_030836_create_indexes.rs  m20251211_040000_create_scrape_results.rs  m20251211_complete_schema.rs  m20251211_initial_schema.rs  m20251212_add_scrape_result_fields.rs  m20251213_add_missing_fields.rs  m20251213_add_task_fields.rs  m20251214_063323_m20251214_add_name_to_crawls.rs  m20251214_102356_add_url_to_crawls.rs  m20251214_103104_add_updated_at_to_crawls.rs  m20251214_103918_add_attempt_count_to_webhook_events.rs  m20251214_add_more_missing_fields.rs  m20251214_add_response_status_to_webhook_events.rs  m20251216_add_expires_at_to_tasks.rs  m20251222_geographic_restrictions.rs  m20251225_scrape_results_url.rs  m20260113_api_key_hash.rs  m20260119_audit_log.rs  m20260119_audit_log_indexes.rs  main.rs
migrations/: 001_initial_schema.sql  002_add_crawl_url_fields.sql  003_add_acquire_next_indexes.sql  004_drop_feature_flags.sql
migrations/2025011201_auth_add_scopes/: down.sql  up.sql
migrations/2025011202_auth_add_feature_flags/: down.sql  up.sql
migrations/2025011203_auth_audit_log/: down.sql  up.sql
openspec/: project.md
scripts/: archive_change.sh  health-check.sh  pre-commit-check.sh  run-full-test.sh  run-tests.sh  start-test-env.sh  test-env.sh
src/: lib.rs  main.rs
src/application/: mod.rs
src/bootstrap/: config.rs  engines.rs  infrastructure.rs  mod.rs  routes.rs  services.rs  telemetry.rs
test-config/: prometheus.yml
tests/: main.rs  sdk_api_test.rs  stress_test.py
tools/: add_credits.rs  add_credits.sql
(+757 files in other folders)
