# Copyright (c) 2025 Kirky.X
#
# Licensed under the Apache License, Version 2.0
# See LICENSE file in the project root for full license information.

[package]
name = "crawlrs"
version = "0.1.0"
edition = "2021"
authors = ["Kirky.X <Kirky-X@outlook.com>"]

exclude = []

[features]
# 默认核心功能（不包含 S3、genai）
default = ["engine-reqwest", "rate-limiting", "metrics", "dbnexus-postgres", "logging", "config", "oxcache-cache"]

# 预设配置
lite = ["engine-reqwest", "dbnexus-sqlite", "rate-limiting", "logging", "config", "oxcache-cache"]
standard = ["default", "engine-playwright"]
full = ["standard", "engine-fire-cdp", "engine-fire-tls", "engine-flaresolverr", "dbnexus-sqlite", "search-all", "api-sdk"]

# genai 作为独立 optional dep，通过 features 启用
genai-llm = ["dep:genai"]

# 搜索引擎组合特性
search-all = ["search-google", "search-bing", "search-baidu", "search-sogou"]

# --- 引擎特性 ---
# 基础 HTTP 引擎 (始终可用)
# scraper/chardetng/encoding_rs/robotstxt 用于 HTTP 抓取的 HTML 解析与编码处理
engine-reqwest = ["dep:scraper", "dep:chardetng", "dep:encoding_rs", "dep:robotstxt"]

# Playwright 引擎 (引入 chromiumoxide)
engine-playwright = ["dep:chromiumoxide"]

# Fire 引擎组件
engine-fire-cdp = []
engine-fire-tls = []

# FlareSolverr 引擎
engine-flaresolverr = []

# --- 浏览器下载特性 (实验性) ---
# 自动下载浏览器功能，需要 chromiumoxide_fetcher
browser-download = ["dep:chromiumoxide_fetcher"]

# --- 搜索特性 ---
search-google = []
search-bing = []
search-baidu = []
search-sogou = []

# --- 基础设施特性 ---
rate-limiting = ["dep:limiteron"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:sysinfo"]

# --- 数据库特性 (使用 dbnexus) ---
# dbnexus 负责所有数据库访问，包括连接池、权限控制、迁移等
# 注意：sea_orm 内部使用下划线命名
dbnexus-postgres = ["dep:dbnexus", "dep:sea_orm", "dbnexus/postgres"]
dbnexus-sqlite = ["dep:dbnexus", "dep:sea_orm", "dbnexus/sqlite"]

# --- 配置管理特性 ---
config = ["dep:confers", "dep:figment"]

# --- 日志特性 ---
# inklog: 新一代结构化日志库（替换 tracing 的下一 phase）
logging = ["dep:inklog"]

# --- API SDK 封装特性 ---
# sdforge: 基于 axum/tower 的接口生成器
api-sdk = ["dep:sdforge"]

# --- 缓存特性 ---
# oxcache: 内存缓存库（moka backend）
oxcache-cache = ["dep:oxcache"]

# --- 已移除的旧数据库特性 (不再使用) ---
# db-postgres = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
# db-sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]

[dependencies]
# Async runtime and web framework
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
    "time",
] }
axum = "0.8"
futures = "0.3"
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["trace", "cors"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confers = { version = "0.4", default-features = false, features = ["validation", "watch", "toml", "env"], optional = true }
# figment: confers 的 Config derive 宏生成代码引用 figment，需作为直接依赖
# 仅在启用 config 特性时需要（与 confers 同步门禁）
figment = { version = "0.10", default-features = false, features = ["toml", "json", "yaml", "env"], optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client and networking
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs", "cookies", "http2", "charset", "system-proxy", "gzip", "brotli"] }
url = "2.5"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# Database - 使用 dbnexus (完全负责数据库底层)
# dbnexus 提供：连接池管理、权限控制、迁移框架、指标监控、审计日志
# 注意：需要同时添加 sea-orm 以支持实体宏
dbnexus = { version = "0.2", default-features = false, features = [
    "postgres",           # 仅 PostgreSQL，不再支持 SQLite
    "runtime-tokio-rustls",
    "permission",         # 声明式权限控制
    "cache",              # 缓存支持 (PermissionContext 需要)
    "macros",             # 过程宏 (db_crud, db_permission, db_entity)
    "migration",          # 数据库迁移框架
    "sql-parser",         # SQL 解析器 (包含 regex)
    "metrics",            # Prometheus 指标监控
    "config-env",         # 环境变量配置支持
    "config-toml",        # TOML 配置支持 (替代旧的 config-yaml)
    "chrono",             # chrono 时间类型支持 (crates.io 版名称)
    "uuid",               # UUID 类型支持 (crates.io 版名称)
    "with-json",          # JSON 类型支持
], optional = true }

# Sea-ORM - 需要用于实体宏定义 (dbnexus 构建在 Sea-ORM 之上)
# 注意：版本必须与 dbnexus 0.2 保持一致 (2.0.0-rc.37)
# 只有启用 dbnexus 特性时才需要 sea-orm
# 使用 sea_orm 内部名 (Cargo 要求) 通过 package 属性引用实际包
sea_orm = { version = "2.0.0-rc.37", default-features = false, features = ["runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"], optional = true, package = "sea-orm" }

# --- 已移除的旧数据库依赖 (不再使用) ---
# sea-orm = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
# sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono", "json", "postgres"] }

# Caching and state management
dashmap = "6.1"
once_cell = "1.21"

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
validator = { version = "0.20", features = ["derive"] }
sysinfo = { version = "0.39", optional = true }
dirs = "5.0"

# Logging and observability
# inklog: 企业级结构化日志库（已完全替换 tracing）
# inklog 内部同时安装 tracing subscriber 和 log::Log adapter，
# 项目代码使用 log facade（log::info! 等）记录日志
log = "0.4"
inklog = { version = "0.1", default-features = false, features = ["cli", "http", "postgres"], optional = true }
# sdforge: API SDK 封装库（基于 axum/tower 的接口生成器）
# crates.io 版 features 适配：serde/serde_json/chrono 为必需依赖非 feature
sdforge = { version = "0.4", default-features = false, features = ["http"], optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"], optional = true }

# Web scraping and content processing
scraper = { version = "0.27", optional = true }
robotstxt = { version = "0.3", optional = true }
chromiumoxide = { version = "0.9", optional = true }
chromiumoxide_fetcher = { version = "0.9", optional = true }

# Text processing and encoding
chardetng = { version = "1.0", optional = true }
encoding_rs = { version = "0.8", optional = true }
deunicode = "1.6"
lru = "0.16"
strsim = "0.11"
html-escape = "0.2"
serde_urlencoded = "0.7"
urlencoding = "2.1"

# Cryptography and encoding
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
bcrypt = "0.18"
zeroize = "1.8"

# Network utilities
ipnetwork = "0.21"

# Rate limiting and circuit breaking
# 已移除 governor，替换为 limiteron
limiteron = { version = "0.2", default-features = false, features = [
    "postgres",
    "ban-manager",
    "quota-control",
    "circuit-breaker",
    "telemetry",
    "monitoring",
    "parallel-checker",
    "audit-log",
], optional = true }

# Concurrency and synchronization
parking_lot = "0.12"

# Regular expressions
regex = "1.12"

bytes = "1.11"
genai = { version = "0.6", optional = true }
toml = "0.9"

# Dependency Injection
trait-kit = { version = "0.3", features = ["async", "confers"] }
oxcache = { version = "0.3", default-features = false, features = ["memory", "serialization", "macros", "batch-write", "metrics", "bloom-filter", "tracing", "futures"], optional = true }
ahash = "0.8"

# API Documentation (optional - controlled by 'openapi' feature)
# utoipa = { version = "5.4", optional = true }
# utoipa-axum = { version = "0.2", optional = true }
# utoipa-swagger-ui = { version = "9.0", optional = true, default-features = false, features = ["axum", "vendored"] }

[dev-dependencies]
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
    "time",
    "test-util",
] }
tokio-test = "0.4"
wiremock = "0.6"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
cucumber = { version = "0.23", features = ["macros"] }
axum-test = "18.6"
futures = "0.3"
tempfile = "3.24"
uuid = { version = "1.23", features = ["v4"] }
# sqlx 已在主依赖中移除，不再用于测试
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
criterion = { version = "0.8", features = ["html_reports"] }

# testcontainers: 集成测试基础设施（需 Docker）
# testcontainers 0.27.1 提供 core API + AsyncRunner
# testcontainers-modules 0.15.0 提供 PostgreSQL 现成镜像
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"
required-features = ["full"]

[[test]]
name = "sdk_api_test"
path = "tests/sdk_api_test.rs"
required-features = ["api-sdk"]

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[[bin]]
name = "crawlrs"
path = "src/main.rs"

# =============================================================================
# Build Optimization Profiles
# =============================================================================
# Optimized release builds for production deployment

[profile.release]
# Link-Time Optimization: improves runtime performance by enabling
# cross-crate optimizations (10-20% performance improvement)
lto = "thin"

# Reduce code generation units to 1 for maximum optimization
# Trade-off: longer compile time, but better optimization
codegen-units = 1

# Maximum optimization level
opt-level = 3

# Strip debug symbols to reduce binary size (~10-20% size reduction)
strip = "symbols"

# Enable additional optimizations for release builds
panic = "abort"
overflow-checks = true

[profile.bench]
# Use release profile settings for benchmarks
inherits = "release"
debug = true

[profile.dev]
# Faster incremental builds for development
opt-level = 0
debug = true

[workspace]
members = ["examples"]

# =============================================================================
# Database Configuration (使用 dbnexus 管理迁移)
# =============================================================================
# dbnexus 使用 Rust 代码定义表结构，不再需要 SQL 迁移文件
# workspace.metadata.dbnexus = {}

# =============================================================================
# Lint Configuration
# =============================================================================
# Suppress external dependency cfg warnings from confers_macros crate

[lints.rust]
unexpected_cfgs = "allow"
