# Copyright (c) 2025 Kirky.X
#
# Licensed under the Apache License, Version 2.0
# See LICENSE file in the project root for full license information.

[package]
name = "crawlrs"
version = "0.1.0"
edition = "2021"
authors = ["Kirky.X <Kirky-X@outlook.com>"]

exclude = []

[features]
# 默认不启用任何特性（按需显式启用）
# 选用预设（standard/full）或显式列出所需特性即可
default = []

# 预设配置（层层递进：standard ⊂ full）
# 强制组件（trait-kit/inklog/oxcache/limiteron/sdforge/confers/dbnexus + scraper/chardetng/
# encoding_rs/robotstxt）已是非可选依赖，不再通过 feature 门禁控制。
# 预设仅区分 JS 渲染/监控/FlareSolverr 等可选项组合。
# standard: 核心组件默认启用 + Playwright JS 渲染 + 指标监控（生产可用）
standard = ["engine-playwright", "metrics"]
# full: standard + FlareSolverr（已合并原 fire-cdp/fire-tls/flaresolverr 三引擎）
# 注意：原 search-* / dbnexus-sqlite / engine-fire-cdp / engine-fire-tls 已删除
full = ["standard", "engine-flaresolverr"]

# genai 作为独立 optional dep，通过 features 启用
genai-llm = ["dep:genai"]

# --- 引擎特性 ---
# Playwright 引擎 (引入 chromiumoxide)
engine-playwright = ["dep:chromiumoxide"]

# FlareSolverr 引擎（合并原 fire-cdp / fire-tls / flaresolverr 三引擎）
# 通过 FlareSolverrMode 枚举区分 Full / Cdp / Tls 三种工作模式
engine-flaresolverr = []

# --- 浏览器下载特性 (实验性) ---
# 自动下载浏览器功能，需要 chromiumoxide_fetcher
browser-download = ["dep:chromiumoxide_fetcher"]

# --- 基础设施特性 ---
# metrics 仅控制监控指标相关依赖（metrics / prometheus / sysinfo）
# 7 个强制组件 + HTTP 抓取栈已是非可选，不再需要 feature 门禁
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:sysinfo"]

# --- 测试特性 ---
# test-mocks: 暴露 src/presentation/sdk/mocks.rs 等测试专用 mock 模块。
# unit test 自动通过 cfg(test) 启用；integration test 需显式 --features test-mocks。
# 这样 production binary 编译时 mocks 完全不参与编译（优于依赖 linker 优化 dead code）。
test-mocks = []

# --- 运维工具特性 ---
# admin-tools: 暴露 tools/add_credits.rs 等运维 CLI。
# 默认不启用 — production release 不会编译 admin 工具，避免误暴露。
# 构建：cargo build --bin add_credits --features admin-tools
admin-tools = []

# --- 已移除的旧数据库特性 (不再使用) ---
# db-postgres = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
# db-sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]
# --- 已移除的 engine-reqwest feature ---
# engine-reqwest 已是非可选依赖（scraper/chardetng/encoding_rs/robotstxt 全部非可选）

[dependencies]
# Async runtime and web framework
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
    "time",
] }
axum = "0.8"
futures = "0.3"
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["trace", "cors"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confers = { version = "0.4", default-features = false, features = ["validation", "watch", "toml", "env"] }
# figment: confers 的 Config derive 宏生成代码引用 figment，需作为直接依赖
figment = { version = "0.10", default-features = false, features = ["toml", "json", "yaml", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client and networking
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs", "cookies", "http2", "charset", "system-proxy", "gzip", "brotli"] }
url = "2.5"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# Database - 使用 dbnexus (完全负责数据库底层)
# dbnexus 提供：连接池管理、权限控制、迁移框架、指标监控、审计日志
# 注意：需要同时添加 sea-orm 以支持实体宏
dbnexus = { version = "0.4", default-features = false, features = [
    "postgres",           # 仅 PostgreSQL，不再支持 SQLite
    "runtime-tokio-rustls",
    # permission feature 未在此显式启用：项目代码未直接调用 dbnexus permission API
    # (应用层使用 auth_scope_service/scope_validation 做权限检查)。
    # 但 `permission` 仍被传递性启用 (inklog + limiteron 依赖)，因此
    # `DbPool::try_from` 同步构造不可用 — 所有测试需用 `DbPool::with_config`
    # (async) + `TEST_DATABASE_URL`。`tests/common/helpers/db_pool.rs` 已统一封装。
    "cache",              # 缓存支持
    "macros",             # 过程宏 (db_crud, db_entity)
    "migration",          # 数据库迁移框架
    "sql-parser",         # SQL 解析器 (包含 regex)
    "metrics",            # Prometheus 指标监控
    "config-env",         # 环境变量配置支持
    "config-toml",        # TOML 配置支持 (替代旧的 config-yaml)
    "chrono",             # chrono 时间类型支持 (crates.io 版名称)
    "uuid",               # UUID 类型支持 (crates.io 版名称)
    "with-json",          # JSON 类型支持
] }

# Sea-ORM - 需要用于实体宏定义 (dbnexus 构建在 Sea-ORM 之上)
# 注意：版本必须与 dbnexus 0.4 保持一致 (2.0.0-rc.43)
# 使用 sea_orm 内部名 (Cargo 要求) 通过 package 属性引用实际包
sea_orm = { version = "2.0.0-rc.43", default-features = false, features = ["runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"], package = "sea-orm" }

# --- 已移除的旧数据库依赖 (不再使用) ---
# sea-orm = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
# sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono", "json", "postgres"] }

# Caching and state management
dashmap = "6.1"
once_cell = "1.21"

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
validator = { version = "0.20", features = ["derive"] }
sysinfo = { version = "0.39", optional = true }
dirs = "5.0"

# Logging and observability
# inklog: 企业级结构化日志库（已完全替换 tracing）
# inklog 内部同时安装 tracing subscriber 和 log::Log adapter，
# 项目代码使用 log facade（log::info! 等）记录日志
log = "0.4"
inklog = { version = "0.1", default-features = false, features = ["cli", "http", "postgres"] }
# sdforge: API SDK 封装库（基于 axum/tower 的接口生成器）
# crates.io 版 features 适配：serde/serde_json/chrono 为必需依赖非 feature
sdforge = { version = "0.4", default-features = false, features = ["http"] }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"], optional = true }

# Web scraping and content processing
# HTTP 抓取栈（scraper/robotstxt/chardetng/encoding_rs）为项目核心功能，非可选
scraper = { version = "0.27" }
robotstxt = { version = "0.3" }
chromiumoxide = { version = "0.9", optional = true }
chromiumoxide_fetcher = { version = "0.9", optional = true }

# Text processing and encoding
chardetng = { version = "1.0" }
encoding_rs = { version = "0.8" }
deunicode = "1.6"
lru = "0.18"
strsim = "0.11"
html-escape = "0.2"
serde_urlencoded = "0.7"
urlencoding = "2.1"

# Cryptography and encoding
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
bcrypt = "0.19"
zeroize = "1.9"

# Network utilities
ipnetwork = "0.21"

# Rate limiting and circuit breaking
# 已移除 governor，替换为 limiteron
# 注意：limiteron 仅支持 postgres（与 dbnexus 配套使用），
# 不存在 sqlite 兼容路径，因此未拆分 feature
limiteron = { version = "0.2", default-features = false, features = [
    "postgres",
    "ban-manager",
    "quota-control",
    "circuit-breaker",
    "monitoring",
    "parallel-checker",
] }

# Concurrency and synchronization
parking_lot = "0.12"

# Regular expressions
regex = "1.12"

bytes = "1.12"
genai = { version = "0.6", optional = true }
toml = "0.9"

# Dependency Injection
trait-kit = { version = "0.3", features = ["async", "confers"] }
oxcache = { version = "0.3", default-features = false, features = ["memory", "serialization", "macros", "batch-write", "metrics", "bloom-filter", "tracing", "futures"] }
ahash = "0.8"

# API Documentation
# 注意：'openapi' 不是 Cargo feature，而是 sdforge_macros 的 forge 宏生成的
# cfg(feature = "openapi") 条件编译标记。为避免 unexpected_cfgs 警告，
# 必须在 [lints.rust.unexpected_cfgs] check-cfg 列表中显式声明 "openapi" 值。
# utoipa = { version = "5.4", optional = true }
# utoipa-axum = { version = "0.2", optional = true }
# utoipa-swagger-ui = { version = "9.0", optional = true, default-features = false, features = ["axum", "vendored"] }

[dev-dependencies]
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
    "time",
    "test-util",
] }
tokio-test = "0.4"
wiremock = "0.6"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
cucumber = { version = "0.23", features = ["macros"] }
axum-test = "18.6"
futures = "0.3"
tempfile = "3.27"
uuid = { version = "1.23", features = ["v4"] }
# sqlx 已在主依赖中移除，不再用于测试
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
criterion = { version = "0.8", features = ["html_reports"] }

# testcontainers: 集成测试基础设施（需 Docker）
# testcontainers 0.27.1 提供 core API + AsyncRunner
# testcontainers-modules 0.15.0 提供 PostgreSQL 现成镜像
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

# DI 测试需要直接访问 AsyncKit / ModuleMeta（与主依赖同版本）
trait-kit = { version = "0.3", features = ["async", "confers"] }

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"
required-features = ["full"]

# sdk_api_test 引用 `crawlrs::presentation::sdk::mocks::*`，需要 test-mocks feature
# 启用 mocks 模块编译。运行方式：`cargo test --features test-mocks --test sdk_api_test`
[[test]]
name = "sdk_api_test"
path = "tests/sdk_api_test.rs"
required-features = ["test-mocks"]

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[[bin]]
name = "crawlrs"
path = "src/main.rs"

# Admin CLI: add credits to a team.
# Usage: DATABASE_URL=... cargo run --bin add_credits --features admin-tools -- <team-uuid> <amount> [description]
[[bin]]
name = "add_credits"
path = "tools/add_credits.rs"
required-features = ["admin-tools"]

# =============================================================================
# Build Optimization Profiles
# =============================================================================
# Optimized release builds for production deployment

[profile.release]
# Link-Time Optimization: improves runtime performance by enabling
# cross-crate optimizations (10-20% performance improvement)
lto = "thin"

# Reduce code generation units to 1 for maximum optimization
# Trade-off: longer compile time, but better optimization
codegen-units = 1

# Maximum optimization level
opt-level = 3

# Strip debug symbols to reduce binary size (~10-20% size reduction)
strip = "symbols"

# Enable additional optimizations for release builds
panic = "abort"
overflow-checks = true

[profile.bench]
# Use release profile settings for benchmarks
inherits = "release"
debug = true

[profile.dev]
# Faster incremental builds for development
opt-level = 0
debug = true

[workspace]
members = ["examples"]

# =============================================================================
# Database Configuration (使用 dbnexus 管理迁移)
# =============================================================================
# dbnexus 使用 Rust 代码定义表结构，不再需要 SQL 迁移文件
# workspace.metadata.dbnexus = {}

# =============================================================================
# Lint Configuration
# =============================================================================
# 通过 --check-cfg 显式声明合法的 feature 值，避免外部宏（confers_macros 等）
# 触发 unexpected_cfgs 警告。新增 feature 时必须同步在 check-cfg 列表中声明。

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = [
    'cfg(feature, values("engine-playwright", "engine-flaresolverr", "browser-download", "metrics", "genai-llm", "standard", "full", "openapi", "test-mocks", "admin-tools"))',
]
