# Copyright (c) 2025 Kirky.X
#
# Licensed under the Apache License, Version 2.0
# See LICENSE file in the project root for full license information.

[package]
name = "crawlrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = ["Kirky.X <Kirky-X@outlook.com>"]
license = "Apache-2.0"
description = "crawlrs - Enterprise-grade web scraping and crawling platform built with Rust"
homepage = "https://github.com/Kirky-X/crawlrs"
repository = "https://github.com/Kirky-X/crawlrs"
documentation = "https://docs.rs/crawlrs"
readme = "README.md"
keywords = ["scraping", "crawling", "web-scraping", "data-extraction", "crawler"]
categories = ["web-programming", "web-programming::http-client"]

exclude = []

[features]
default = []

standard = ["engine-playwright", "metrics"]
full = ["standard", "engine-flaresolverr"]

genai-llm = ["dep:genai"]

# --- 引擎特性 ---
engine-playwright = ["dep:chromiumoxide"]
engine-flaresolverr = []

# --- 浏览器下载特性 ---
browser-download = ["dep:chromiumoxide_fetcher"]

# --- 基础设施特性 ---
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:sysinfo"]

# --- 测试特性 ---
test-mocks = []

# --- 运维工具特性 ---
admin-tools = []

[dependencies]
# Async runtime and web framework
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
    "time",
] }
axum = "0.8"
futures = "0.3"
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["trace", "cors"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confers = { version = "0.4", default-features = false, features = ["validation", "watch", "toml", "env"] }
figment = { version = "0.10", default-features = false, features = ["toml", "json", "yaml", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Security — constant-time comparison for HMAC signature verification
subtle = "2.6"

# HTTP client and networking
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs", "cookies", "http2", "charset", "system-proxy", "gzip", "brotli"] }
url = "2.5"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# Database
dbnexus = { version = "0.4", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "cache",
    "macros",
    "migration",
    "sql-parser",
    "metrics",
    "config-env",
    "config-toml",
    "chrono",
    "uuid",
    "with-json",
] }

sea_orm = { version = "2.0.0-rc.43", default-features = false, features = ["runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"], package = "sea-orm" }

# Caching and state management
dashmap = "6.1"
once_cell = "1.21"

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
validator = { version = "0.20", features = ["derive"] }
sysinfo = { version = "0.39", optional = true }
dirs = "5.0"

# Logging and observability
log = "0.4"
inklog = { version = "0.1", default-features = false, features = ["cli", "http", "postgres"] }
sdforge = { version = "0.4", default-features = false, features = ["http"] }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"], optional = true }

# Web scraping and content processing
scraper = { version = "0.27" }
robotstxt = { version = "0.3" }
chromiumoxide = { version = "0.9", optional = true }
chromiumoxide_fetcher = { version = "0.9", optional = true }

# Text processing and encoding
chardetng = { version = "1.0" }
encoding_rs = { version = "0.8" }
deunicode = "1.6"
lru = "0.18"
strsim = "0.11"
html-escape = "0.2"
serde_urlencoded = "0.7"
urlencoding = "2.1"

# Cryptography and encoding
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
bcrypt = "0.19"
zeroize = "1.9"

# Network utilities
ipnetwork = "0.21"

# Rate limiting and circuit breaking
limiteron = { version = "0.2", default-features = false, features = [
    "postgres",
    "ban-manager",
    "quota-control",
    "circuit-breaker",
    "monitoring",
    "parallel-checker",
] }

# Concurrency and synchronization
parking_lot = "0.12"

# Regular expressions
regex = "1.12"

bytes = "1.12"
genai = { version = "0.6", optional = true }
toml = "0.9"

# Dependency Injection
trait-kit = { version = "0.3", features = ["async", "confers"] }
oxcache = { version = "0.3", default-features = false, features = ["memory", "serialization", "macros", "batch-write", "metrics", "bloom-filter", "tracing", "futures"] }
ahash = "0.8"

# API Documentation
# 'openapi' is a cfg flag generated by sdforge_macros, declared in [lints.rust.unexpected_cfgs].

[dev-dependencies]
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
    "time",
    "test-util",
] }
tokio-test = "0.4"
wiremock = "0.6"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
cucumber = { version = "0.23", features = ["macros"] }
axum-test = "18.6"
futures = "0.3"
tempfile = "3.27"
uuid = { version = "1.23", features = ["v4"] }
criterion = { version = "0.8", features = ["html_reports"] }

testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

trait-kit = { version = "0.3", features = ["async", "confers"] }

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"
required-features = ["full"]

[[test]]
name = "main"
path = "tests/main.rs"
required-features = ["test-mocks"]

[[test]]
name = "sdk_api_test"
path = "tests/sdk_api_test.rs"
required-features = ["test-mocks"]

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[[bin]]
name = "crawlrs"
path = "src/main.rs"

[[bin]]
name = "add_credits"
path = "tools/add_credits.rs"
required-features = ["admin-tools"]

# =============================================================================
# Build Optimization Profiles
# =============================================================================

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
overflow-checks = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = ["examples"]

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = [
    'cfg(feature, values("engine-playwright", "engine-flaresolverr", "browser-download", "metrics", "genai-llm", "standard", "full", "openapi", "test-mocks", "admin-tools"))',
]
