# Copyright (c) 2025 Kirky.X
#
# Licensed under the Apache License, Version 2.0
# See LICENSE file in the project root for full license information.

[package]
name = "crawlrs-examples"
version = "0.1.0"
edition = "2021"
authors = ["Kirky.X <Kirky-X@outlook.com>"]
description = "Example programs demonstrating crawlrs library usage"
default-run = "basic_scrape"
publish = false

[dependencies]
# crawlrs 主项目 - 从父目录引用
# 主项目 default = []，HTTP 抓取栈（原 engine-reqwest）已是非可选依赖，
# 此处仅显式启用 metrics 以运行 metrics_export 示例
crawlrs = { path = "..", default-features = false, features = [
    "metrics",
] }

# 异步运行时
tokio = { version = "1.52", features = ["full"] }

# 日志记录（使用 log facade，inklog 在 crawlrs 主项目中初始化）
log = "0.4"

# 其他常用依赖
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
base64 = "0.22"
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4", features = ["std"] }
rand = "0.10"

# 数据库示例依赖（与主项目保持版本一致）
dbnexus = { version = "0.4", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "permission",
    "cache",
    "migration",
    "auto-migrate",
    "config-toml",
    "config-env",
    "chrono",
    "uuid",
    "with-json",
] }
sea-orm = { version = "2.0.0-rc.43", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
] }

# 配置示例依赖
confers = { version = "0.4", default-features = false, features = ["validation", "toml", "env"] }
figment = { version = "0.10", default-features = false, features = ["toml", "json", "yaml", "env"] }
validator = { version = "0.20", features = ["derive"] }

# SDK 示例依赖
sdforge = { version = "0.4", default-features = false, features = ["http"] }
axum = "0.8"

# Advanced examples
[[bin]]
name = "async_batch"
path = "advanced/async_batch.rs"

[[bin]]
name = "async_streams"
path = "advanced/async_streams.rs"

[[bin]]
name = "custom_engines"
path = "advanced/custom_engines.rs"

[[bin]]
name = "error_handling"
path = "advanced/error_handling.rs"

[[bin]]
name = "metrics_export"
path = "advanced/metrics_export.rs"

# Auth examples
[[bin]]
name = "api_key_auth"
path = "auth/api_key_auth.rs"

[[bin]]
name = "bearer_token"
path = "auth/bearer_token.rs"

[[bin]]
name = "scope_validation"
path = "auth/scope_validation.rs"

[[bin]]
name = "team_isolation"
path = "auth/team_isolation.rs"

# Browser examples
[[bin]]
name = "test_flaresolverr_direct"
path = "browser/test_flaresolverr_direct.rs"

[[bin]]
name = "test_google_homepage"
path = "browser/test_google_homepage.rs"

[[bin]]
name = "test_google_preview"
path = "browser/test_google_preview.rs"

[[bin]]
name = "test_playwright_basic"
path = "browser/test_playwright_basic.rs"

# Cache examples
[[bin]]
name = "cache_configuration"
path = "cache/cache_configuration.rs"

# Database examples
[[bin]]
name = "basic_crud"
path = "database/basic_crud.rs"

[[bin]]
name = "transaction"
path = "database/transaction.rs"

[[bin]]
name = "migration"
path = "database/migration.rs"

# Config examples
[[bin]]
name = "basic_config"
path = "config/basic_config.rs"

[[bin]]
name = "env_override"
path = "config/env_override.rs"

[[bin]]
name = "validation"
path = "config/validation.rs"

# SDK examples
[[bin]]
name = "basic_sdk"
path = "sdk/basic_sdk.rs"

[[bin]]
name = "custom_middleware"
path = "sdk/custom_middleware.rs"

[[bin]]
name = "oxcache_cache"
path = "cache/oxcache_cache.rs"

[[bin]]
name = "ttl_management"
path = "cache/ttl_management.rs"

# Crawl examples
[[bin]]
name = "basic_crawl"
path = "crawl/basic_crawl.rs"

[[bin]]
name = "depth_control"
path = "crawl/depth_control.rs"

[[bin]]
name = "filter_patterns"
path = "crawl/filter_patterns.rs"

[[bin]]
name = "result_pagination"
path = "crawl/result_pagination.rs"

[[bin]]
name = "robots_compliance"
path = "crawl/robots_compliance.rs"

[[bin]]
name = "status_tracking"
path = "crawl/status_tracking.rs"

# Extract examples
[[bin]]
name = "css_selector"
path = "extract/css_selector.rs"

[[bin]]
name = "llm_extraction"
path = "extract/llm_extraction.rs"

[[bin]]
name = "multi_rules"
path = "extract/multi_rules.rs"

[[bin]]
name = "output_formats"
path = "extract/output_formats.rs"

[[bin]]
name = "structured_data"
path = "extract/structured_data.rs"

[[bin]]
name = "xpath_extraction"
path = "extract/xpath_extraction.rs"

# Proxy examples
[[bin]]
name = "http_proxy"
path = "proxy/http_proxy.rs"

[[bin]]
name = "proxy_auth"
path = "proxy/proxy_auth.rs"

[[bin]]
name = "rotate_proxies"
path = "proxy/rotate_proxies.rs"

# Rate limiting examples
[[bin]]
name = "basic_rate_limit"
path = "rate-limiting/basic_rate_limit.rs"

[[bin]]
name = "circuit_breaker"
path = "rate-limiting/circuit_breaker.rs"

[[bin]]
name = "team_concurrency"
path = "rate-limiting/team_concurrency.rs"

# Scrape examples
[[bin]]
name = "basic_scrape"
path = "scrape/basic_scrape.rs"

[[bin]]
name = "custom_headers"
path = "scrape/custom_headers.rs"

[[bin]]
name = "extraction_rules"
path = "scrape/extraction_rules.rs"

[[bin]]
name = "form_extraction"
path = "scrape/form_extraction.rs"

[[bin]]
name = "multi_format_output"
path = "scrape/multi_format_output.rs"

[[bin]]
name = "page_actions"
path = "scrape/page_actions.rs"

[[bin]]
name = "screenshot"
path = "scrape/screenshot.rs"

# Search examples
[[bin]]
name = "test_baidu"
path = "search/test_baidu.rs"

[[bin]]
name = "test_bing"
path = "search/test_bing.rs"

[[bin]]
name = "test_smart_search"
path = "search/test_smart_search.rs"

[[bin]]
name = "test_smart_search_demo"
path = "search/test_smart_search_demo.rs"

[[bin]]
name = "test_sogou"
path = "search/test_sogou.rs"

[[bin]]
name = "test_unified_search"
path = "search/test_unified_search.rs"

# Teams examples
[[bin]]
name = "basic_teams"
path = "teams/basic_teams.rs"

[[bin]]
name = "credits_management"
path = "teams/credits_management.rs"

[[bin]]
name = "geo_restrictions"
path = "teams/geo_restrictions.rs"

# Text encoding examples

# Webhooks examples
[[bin]]
name = "basic_webhook"
path = "webhooks/basic_webhook.rs"

[[bin]]
name = "retry_logic"
path = "webhooks/retry_logic.rs"

[[bin]]
name = "task_events"
path = "webhooks/task_events.rs"

# 共享库：提供示例程序复用的工具模块（如搜索测试工具）
[lib]
name = "crawlrs_examples"
path = "src/lib.rs"

# 与主 crate 保持一致的 lints 配置（sdforge_macros 的 forge 宏会生成 cfg(feature = "openapi")）
[lints.rust]
unexpected_cfgs = "allow"
